Added App.config Formatting

--- a/Services/EchoService/EchoService.csproj
+++ b/Services/EchoService/EchoService.csproj
@@ -38,7 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Echo.cs" />
+    <Compile Include="EchoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -46,6 +46,11 @@
       <Project>{8AF22C0A-79C5-422B-A033-037C68055EEB}</Project>
       <Name>Stead</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
